fix scrolling - we had an issue that if sidebar is opened and we scrolled, the calendar remained above and I couldn't use the drag&drop. now calendar and sidebar have different scrollbars, so I can scroll only the sidebar, scroll only the calendar etc.

--- a/src/admin/pages/dashboard/admin-dashboard.scss
+++ b/src/admin/pages/dashboard/admin-dashboard.scss
@@ -1,5 +1,5 @@
 .main-layout {
-  height: max-content !important;
+  //height: max-content !important;
 }
 .destinations-content {
   display: flex;
